[gd_scene load_steps=30 format=3 uid="uid://ixvmmog1grra"]

[ext_resource type="Script" uid="uid://f52y6dfy6vhs" path="res://Scripts/UI/hud.gd" id="1_sprlj"]
[ext_resource type="Texture2D" uid="uid://doh5qhoders1a" path="res://Assets/Sprites/Exported/Buttons/button-base.png" id="2_7wqu8"]
[ext_resource type="Texture2D" uid="uid://db0d636h7u75s" path="res://Assets/Sprites/Exported/HUD/Frames/small-frame.png" id="2_fqivn"]
[ext_resource type="Texture2D" uid="uid://m0pirrtxq60q" path="res://Assets/Sprites/Exported/HUD/Frames/default-frame.png" id="2_mqf2c"]
[ext_resource type="FontFile" uid="uid://dcabkpfkiyymj" path="res://Scenes/UI/Assets/Fonts/Vinque Rg.otf" id="3_fdl0h"]
[ext_resource type="Theme" uid="uid://reta3c3dnyho" path="res://Resources/Themes/button.tres" id="3_uidm2"]
[ext_resource type="Texture2D" uid="uid://cfmj1t3hau4wb" path="res://Assets/Sprites/Exported/Buildings/leadersHouse-icon.png" id="4_8c63k"]
[ext_resource type="StyleBox" uid="uid://dvvr17qyjcmtl" path="res://Scenes/UI/Assets/Styles/progressbar_health.tres" id="4_8glcj"]
[ext_resource type="Texture2D" uid="uid://dcjb6j6qseb04" path="res://Assets/Sprites/Exported/HUD/Cursors/build_cursor.png" id="4_qdh5o"]
[ext_resource type="Texture2D" uid="uid://pxfw5x400unl" path="res://Assets/Sprites/Exported/Buildings/house-icon.png" id="5_qff6j"]
[ext_resource type="StyleBox" uid="uid://t580o606lwph" path="res://Scenes/UI/Assets/Styles/progressbar_hunger.tres" id="5_vsu76"]
[ext_resource type="Texture2D" uid="uid://clatgmsxnn0mh" path="res://Assets/Sprites/Exported/Buildings/hidingPlace-icon.png" id="6_e17ao"]
[ext_resource type="StyleBox" uid="uid://ccbxlwmk5cknw" path="res://Scenes/UI/Assets/Styles/progressbar_security.tres" id="6_mqf2c"]
[ext_resource type="Texture2D" uid="uid://d166phih6inic" path="res://Assets/Sprites/Exported/Buildings/plowed-icon.png" id="7_0hfmd"]
[ext_resource type="StyleBox" uid="uid://bm1w3purx7v5n" path="res://Scenes/UI/Assets/Styles/progressbar_relations.tres" id="7_7wqu8"]
[ext_resource type="Texture2D" uid="uid://chu3xmb8wgosw" path="res://Assets/Sprites/Exported/Buildings/infirmary-icon.png" id="8_pc4p0"]
[ext_resource type="Texture2D" uid="uid://b6328dvo6jnsd" path="res://Assets/Sprites/Exported/Buildings/trainingArea-icon.png" id="9_iiebs"]
[ext_resource type="Texture2D" uid="uid://b4667p5ttwsom" path="res://Assets/Sprites/Exported/Buildings/church-icon.png" id="10_n5w8m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qdh5o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cna6x"]
texture = ExtResource("2_fqivn")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_am52h"]
texture = ExtResource("2_mqf2c")
texture_margin_left = 40.0
texture_margin_top = 40.0
texture_margin_right = 40.0
texture_margin_bottom = 40.0

[sub_resource type="LabelSettings" id="LabelSettings_vsu76"]
font = ExtResource("3_fdl0h")
font_size = 20
font_color = Color(0.380392, 0.282353, 0.247059, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ux5h0"]
font = ExtResource("3_fdl0h")
font_size = 20
font_color = Color(0.380392, 0.282353, 0.247059, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqf2c"]
bg_color = Color(0.588235, 0.478431, 0.415686, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.207843, 0.176471, 0.164706, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wqu8"]
bg_color = Color(0.570893, 1, 0.585074, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.207843, 0.176471, 0.164706, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fqivn"]
bg_color = Color(0.99699, 0.802473, 0.444244, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.207843, 0.176471, 0.164706, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qdh5o"]
bg_color = Color(0.62058, 0.907631, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.207843, 0.176471, 0.164706, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cna6x"]
bg_color = Color(0.588235, 0.478431, 0.415686, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.207843, 0.176471, 0.164706, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_am52h"]
bg_color = Color(0.979438, 0.544564, 0.575288, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.207843, 0.176471, 0.164706, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Hud" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 13.0
offset_right = -219.0
offset_bottom = -466.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_qdh5o")
script = ExtResource("1_sprlj")

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ButtonsPanel" type="PanelContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_cna6x")

[node name="SectionsPanel" type="HBoxContainer" parent="MainContainer/ButtonsPanel"]
layout_mode = 2

[node name="Col1" type="HBoxContainer" parent="MainContainer/ButtonsPanel/SectionsPanel"]
layout_mode = 2

[node name="BuildOptions" type="VBoxContainer" parent="MainContainer/ButtonsPanel/SectionsPanel/Col1"]
layout_mode = 2

[node name="BuildLeadersHouseButton" type="Button" parent="MainContainer/ButtonsPanel/SectionsPanel/Col1/BuildOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_uidm2")
theme_override_colors/font_color = Color(0.380392, 0.282353, 0.247059, 1)
text = "Casa do Líder"
icon = ExtResource("4_8c63k")

[node name="BuildHouseButton" type="Button" parent="MainContainer/ButtonsPanel/SectionsPanel/Col1/BuildOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_uidm2")
theme_override_colors/font_color = Color(0.380392, 0.282353, 0.247059, 1)
text = "Casa Grande"
icon = ExtResource("5_qff6j")

[node name="BuildHidingPlaceButton" type="Button" parent="MainContainer/ButtonsPanel/SectionsPanel/Col1/BuildOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_uidm2")
theme_override_colors/font_color = Color(0.380392, 0.282353, 0.247059, 1)
text = "Esconderijo"
icon = ExtResource("6_e17ao")

[node name="Col2" type="HBoxContainer" parent="MainContainer/ButtonsPanel/SectionsPanel"]
layout_mode = 2

[node name="BuildOptions" type="VBoxContainer" parent="MainContainer/ButtonsPanel/SectionsPanel/Col2"]
layout_mode = 2

[node name="BuildPlantetionButton" type="Button" parent="MainContainer/ButtonsPanel/SectionsPanel/Col2/BuildOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_uidm2")
theme_override_colors/font_color = Color(0.380392, 0.282353, 0.247059, 1)
text = "Plantação"
icon = ExtResource("7_0hfmd")
flat = true

[node name="BuildInfirmaryButton" type="Button" parent="MainContainer/ButtonsPanel/SectionsPanel/Col2/BuildOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_uidm2")
theme_override_colors/font_color = Color(0.380392, 0.282353, 0.247059, 1)
text = "Enfermaria"
icon = ExtResource("8_pc4p0")

[node name="BuildTrainingAreaButton" type="Button" parent="MainContainer/ButtonsPanel/SectionsPanel/Col2/BuildOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_uidm2")
theme_override_colors/font_color = Color(0.380392, 0.282353, 0.247059, 1)
text = "Área de Treinamento"
icon = ExtResource("9_iiebs")

[node name="BuildChurchButton" type="Button" parent="MainContainer/ButtonsPanel/SectionsPanel/Col2/BuildOptions"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_uidm2")
theme_override_colors/font_color = Color(0.380392, 0.282353, 0.247059, 1)
text = "Centro Espiritual"
icon = ExtResource("10_n5w8m")

[node name="ButtonOptions" type="VBoxContainer" parent="MainContainer/ButtonsPanel/SectionsPanel"]
layout_mode = 2
size_flags_horizontal = 8

[node name="BuildButton" type="TextureButton" parent="MainContainer/ButtonsPanel/SectionsPanel/ButtonOptions"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource("2_7wqu8")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="MainContainer/ButtonsPanel/SectionsPanel/ButtonOptions/BuildButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_qdh5o")
expand_mode = 1
stretch_mode = 5

[node name="StatusPanel" type="PanelContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_am52h")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/StatusPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MoneyContainer" type="HBoxContainer" parent="MainContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="MoneyTextLabel" type="Label" parent="MainContainer/StatusPanel/VBoxContainer/MoneyContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.380392, 0.282353, 0.247059, 1)
theme_override_fonts/font = ExtResource("3_fdl0h")
theme_override_font_sizes/font_size = 20
text = "Dinheiro"

[node name="MoneyLabel" type="Label" parent="MainContainer/StatusPanel/VBoxContainer/MoneyContainer"]
layout_mode = 2
text = "Dinheiro"
label_settings = SubResource("LabelSettings_vsu76")

[node name="HealthContainer" type="HBoxContainer" parent="MainContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MainContainer/StatusPanel/VBoxContainer/HealthContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Saúde"
label_settings = SubResource("LabelSettings_ux5h0")

[node name="Control" type="Control" parent="MainContainer/StatusPanel/VBoxContainer/HealthContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MainContainer/StatusPanel/VBoxContainer/HealthContainer/Control"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.176471, 0.164706, 1)
theme_override_fonts/font = ExtResource("3_fdl0h")
theme_override_styles/background = SubResource("StyleBoxFlat_mqf2c")
theme_override_styles/fill = ExtResource("4_8glcj")
value = 100.0

[node name="PreviewBar" type="ProgressBar" parent="MainContainer/StatusPanel/VBoxContainer/HealthContainer/Control"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.176471, 0.164706, 1)
theme_override_fonts/font = ExtResource("3_fdl0h")
theme_override_styles/background = SubResource("StyleBoxFlat_mqf2c")
theme_override_styles/fill = SubResource("StyleBoxFlat_7wqu8")
value = 100.0

[node name="HungerContainer" type="HBoxContainer" parent="MainContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="HungerLabel" type="Label" parent="MainContainer/StatusPanel/VBoxContainer/HungerContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Fome"
label_settings = SubResource("LabelSettings_ux5h0")

[node name="Control" type="Control" parent="MainContainer/StatusPanel/VBoxContainer/HungerContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MainContainer/StatusPanel/VBoxContainer/HungerContainer/Control"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.176471, 0.164706, 1)
theme_override_fonts/font = ExtResource("3_fdl0h")
theme_override_styles/background = SubResource("StyleBoxFlat_mqf2c")
theme_override_styles/fill = ExtResource("5_vsu76")
value = 100.0

[node name="PreviewBar" type="ProgressBar" parent="MainContainer/StatusPanel/VBoxContainer/HungerContainer/Control"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.176471, 0.164706, 1)
theme_override_fonts/font = ExtResource("3_fdl0h")
theme_override_styles/background = SubResource("StyleBoxFlat_mqf2c")
theme_override_styles/fill = SubResource("StyleBoxFlat_fqivn")
value = 100.0

[node name="SecurityContainer" type="HBoxContainer" parent="MainContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="SecurityLabel" type="Label" parent="MainContainer/StatusPanel/VBoxContainer/SecurityContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Segurança"
label_settings = SubResource("LabelSettings_ux5h0")

[node name="Control" type="Control" parent="MainContainer/StatusPanel/VBoxContainer/SecurityContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MainContainer/StatusPanel/VBoxContainer/SecurityContainer/Control"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.176471, 0.164706, 1)
theme_override_fonts/font = ExtResource("3_fdl0h")
theme_override_styles/background = SubResource("StyleBoxFlat_mqf2c")
theme_override_styles/fill = ExtResource("6_mqf2c")

[node name="PreviewBar" type="ProgressBar" parent="MainContainer/StatusPanel/VBoxContainer/SecurityContainer/Control"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.176471, 0.164706, 1)
theme_override_fonts/font = ExtResource("3_fdl0h")
theme_override_styles/background = SubResource("StyleBoxFlat_mqf2c")
theme_override_styles/fill = SubResource("StyleBoxFlat_qdh5o")

[node name="RelationsContainer" type="HBoxContainer" parent="MainContainer/StatusPanel/VBoxContainer"]
layout_mode = 2

[node name="RelationsLabel" type="Label" parent="MainContainer/StatusPanel/VBoxContainer/RelationsContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Relações"
label_settings = SubResource("LabelSettings_ux5h0")

[node name="Control" type="Control" parent="MainContainer/StatusPanel/VBoxContainer/RelationsContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MainContainer/StatusPanel/VBoxContainer/RelationsContainer/Control"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.176471, 0.164706, 1)
theme_override_fonts/font = ExtResource("3_fdl0h")
theme_override_styles/background = SubResource("StyleBoxFlat_mqf2c")
theme_override_styles/fill = ExtResource("7_7wqu8")

[node name="PreviewBar" type="ProgressBar" parent="MainContainer/StatusPanel/VBoxContainer/RelationsContainer/Control"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.207843, 0.176471, 0.164706, 1)
theme_override_fonts/font = ExtResource("3_fdl0h")
theme_override_styles/background = SubResource("StyleBoxFlat_cna6x")
theme_override_styles/fill = SubResource("StyleBoxFlat_am52h")

[connection signal="pressed" from="MainContainer/ButtonsPanel/SectionsPanel/ButtonOptions/BuildButton" to="." method="_on_button_pressed"]
